checks for the existence of the folder before attempting creation